[project]
name = "better-social-notifications"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "apprise==1.9.6",
    "google-api-python-client==2.188.0",
    "pandas==2.3.3",
    "peewee==3.19.0",
    "python-dotenv==1.2.1",
]
license-files = ["LICENSE"]
authors = [
    { name = "Jack Stockley", email = "jack@jstockley.com"}
]
keywords = ["starter", "template", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
]
[project.urls]
Homepage = "https://github.com/jnstockley/python-starter"
Repository = "https://github.com/jnstockley/python-starter.git"
Issues = "https://github.com/jnstockley/python-starter/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.2",
]
