[project]
name = "better-social-notifications"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14, <3.15"
dependencies = [
    "aiohttp==3.13.5",
    "apprise==1.9.9",
    "google-api-python-client==2.193.0",
    "python-dotenv==1.2.2",
    "pytz==2026.1.post1",
    "sqlalchemy==2.0.49",
]
license-files = ["LICENSE"]
authors = [
    { name = "Jack Stockley", email = "jack@jstockley.com"}
]
keywords = ["starter", "template", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
]
[project.urls]
Homepage = "https://github.com/jnstockley/python-starter"
Repository = "https://github.com/jnstockley/python-starter.git"
Issues = "https://github.com/jnstockley/python-starter/issues"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.13.2",
]
